fix background color of tweet avatar - not enough contrast with animation while loading avatar <img>

--- a/public/assets/css/mosaic.css
+++ b/public/assets/css/mosaic.css
@@ -151,7 +151,7 @@ http://www.opensource.org/licenses/mit-license.php
 }
 
 .bubble.color-0 .twitter-avatar img{
-	background-color: #e1f0fa;
+	background-color: #9BC3E2;
 }
 
 .color-0.top-left header{ background-position: 0px top; }
@@ -211,8 +211,8 @@ http://www.opensource.org/licenses/mit-license.php
 	border-color:#fff;
 }
 
-.bubble.color-2 .twitter-avatar img{
-	background-color: #fde9c7;
+.bubble.color-2 .twitter-avatar img {
+	background-color: #e66922;
 }
 
 .color-2.top-left header{ background-position: -1800px top; }
@@ -243,7 +243,7 @@ http://www.opensource.org/licenses/mit-license.php
 }
 
 .bubble.color-3 .twitter-avatar img{
-	background-color: #fde9c7;
+	background-color: #E8D683;
 }
 
 .color-3.top-left header{ background-position: -2700px top; }
